fixed about page alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,9 +452,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom:2rem
 }
 
-.flex-align{
-  width:90%;
-}
+
 .about{
   max-width:720px;
   padding:0 3rem;
